<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/main_text_view_ip"
            android:text="@string/ip"
            android:textColor="@color/black"
            android:layout_marginTop="250dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/main_edit_text_ip"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/main_text_view_port"
            android:text="@string/port"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/main_edit_text_port"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/main_text_view_db_name"
            android:text="@string/db_name"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/main_edit_text_db_name"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_text_view_username"
            android:text="@string/username"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/main_edit_text_username"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_text_view_password"
            android:text="@string/password"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/main_edit_text_password"
            android:inputType="textPassword"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_text_view_command"
            android:text="@string/command"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/main_edit_text_command"
            />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_radio_group"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            >
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/main_radio_button_query"
                    android:text="@string/query"
                    android:checked="false"
                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/main_radio_button_update"
                    android:text="@string/update"
                    android:layout_marginLeft="30dp"
                    android:checked="false"
                    />

        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_button_execute"
            android:layout_gravity="center"
            android:text="@string/execute"
            android:textAllCaps="false"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_marginTop="30dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_text_view_output"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:background="@color/gray"
            android:text="@string/pre_result"
            android:padding="20dp"
            />
    </LinearLayout>
</ScrollView>
